option java_package = "com.aves.server.model.otr";
option java_outer_classname = "Otr";

message UserId {
    required bytes uuid = 1;
}

message ClientId {
    required uint64 client = 1;
}

message ClientEntry {
    required ClientId client = 1;
    required bytes text = 2;
}

message UserEntry {
    required UserId user = 1;
    repeated ClientEntry clients = 2;
}

message NewOtrMessage {
    required ClientId sender = 1;
    repeated UserEntry recipients = 2;
    optional bool native_push = 3 [default = true];
    optional bytes blob = 4;
}

message OtrAssetMeta {
    required ClientId sender = 1;
    repeated UserEntry recipients = 2;
    optional bool isInline = 3 [default = false];
    optional bool native_push = 4 [default = true];
}